# whisper-sm-rs

./: Cargo.toml
src/: main.rs  model.rs  multilingual.rs
