[package]
name = "whisper-sm"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.1.2"}
candle-nn = "0.1.2"
candle-transformers = "0.1.2"
candle-flash-attn = { version = "0.1.2", optional = true}
safetensors = "0.3.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tokenizers = { version = "0.13.4", default-features = false }
byteorder = "1.4.3"
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
rand = "0.8.5"
wav = "1.0.0"
tracing = "0.1.37"
accelerate-src = { version = "0.3.2", optional = true}
num-traits = "0.2.16"
anyhow = { version = "1", features = ["backtrace"] }

[features]
default = []
cuda = ["candle-core/cuda"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate"]
mkl = ["candle-core/mkl"]
